@@ -3885,7 +3885,6 @@ distribution, and hence starts with
 @example
 @group
 \name@{Normal@}
-\alias@{Normal@}
 \alias@{dnorm@}
 \alias@{pnorm@}
 \alias@{qnorm@}
@@ -3898,9 +3897,8 @@ Also, it is often convenient to have several different ways to refer to
 an @R{} object, and an @code{\alias} does not need to be the name of an
 object.
 
-Note that the @code{\name} is not necessarily a topic documented, and if
-so desired it needs to have an explicit @code{\alias} entry (as in this
-example).
+As from version 2.14.0, the @code{\name} is treated as a topic and need
+not be repeated.  
 
 @item \title@{@var{Title}@}
 @findex \title
